Trying to come up with API

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/anvaka/ngraph.slpa"
+  },
+  "devDependencies": {
+    "ngraph.fromdot": "^0.1.0",
+    "tap": "^0.5.0"
   }
 }
