--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "ngraph.fromdot": "^0.1.0",
     "tap": "^0.5.0"
+  },
+  "dependencies": {
+    "ngraph.random": "0.0.1"
   }
 }
